--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,7 +19,7 @@
         <%= yield %>
 
       <footer class="branding">
-        <small>&copy; 2021 <strong>NbaTeamSocialMedia</strong></small>
+        <small>&copy; 2021 <strong>LeagueTalks</strong></small>
       </footer>
     </div>
 
