--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -14,7 +14,9 @@
 
          <%else%>
 
-          <a href="/homepage"> Continue to your Home Page. </a>
+          <a href="/posts"> Continue to your Home Page. </a>
+          <br>
+          <a href="/logout"> Logout </a>
           
         <%end %>
     </nav>
