--- a/app/views/posts/create_post.erb
+++ b/app/views/posts/create_post.erb
@@ -1,5 +1,6 @@
 <h2>Add a post</h2>
 <form action="/posts" method="POST">
+  <p>Title: <input type="text" name="title"></p>
   <p>Status: <input type="text" name="content"></p>
   <input class="btn btn-primary" type="submit" value="submit">
 </form>
