--- a/app/views/posts/edit_post.erb
+++ b/app/views/posts/edit_post.erb
@@ -1,7 +1,8 @@
 <h2> Edit Post </h2>
 
-<form method="post" action="/posts/<%=@post.id%>">
-  <input id="hidden" type="hidden" name="_method" value="PATCH">
-  <input type="text" name="content" value="<%= @post.content %>">
-  <input type="submit" value="submit">
+<form action="/posts/<%= @post.id %>/edit" method="post">
+    <input type="hidden" name="_method" value="patch">
+    Title: <input type="text" name="title" value="<%= @post.title %>">
+    Content: <textarea name="content"><%= @post.content %></textarea>
+    <input type="submit" value="Edit Post">
 </form>
