Updated posts controller

--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -7,4 +7,4 @@ Content: <%= @post.content %><br>
     <input type="hidden" name="_method" value="delete">
     <input type="submit" value="Delete Post">
 </form>
-<a href="/posts"> Publish Your Post! </a>
+<a href="/posts"> Publish Your Post </a>
