--- a/app/views/posts/edit_post.erb
+++ b/app/views/posts/edit_post.erb
@@ -1,8 +1,8 @@
 <h2> Edit Post </h2>
 
-<form action="/posts/<%= @post.id %>/edit" method="post">
+<form action="/posts/<%= @post.id %>" method="post">
     <input type="hidden" name="_method" value="patch">
     Title: <input type="text" name="title" value="<%= @post.title %>">
-    Content: <textarea name="content"><%= @post.content %></textarea>
+    Content: <input type="text" name="content" value="<%= @post.content %>">
     <input type="submit" value="Edit Post">
 </form>
