--- a/app/views/posts/edit_post.erb
+++ b/app/views/posts/edit_post.erb
@@ -6,3 +6,9 @@
     Content: <input type="text" name="content" value="<%= @post.content %>">
     <input type="submit" value="Edit Post">
 </form>
+
+<form action="/posts/<%= @post.id %>" method="post">
+    <input type="hidden" name="_method" value="delete">
+    <input type="submit" value="Delete Post">
+</form>
+
