--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -1,10 +1,12 @@
 Title: <%= @post.title %><br>
 Content: <%= @post.content %><br>
 
-<a href="/posts/<%= @post.id %>/edit">Edit Post</a>
+        <% if current_user == @post.user %>
+        <a href="/posts/<%= @post.id %>/edit">Edit Post</a>
 
-<form action="/posts/<%= @post.id %>" method="post">
-    <input type="hidden" name="_method" value="delete">
-    <input type="submit" value="Delete Post">
-</form>
-<a href="/posts"> Publish Your Post </a>
+        <form action="/posts/<%= @post.id %>" method="post">
+        <input type="hidden" name="_method" value="delete">
+        </form>
+        
+        <a href="/posts"> Publish Your Post </a> 
+        <% end %>
