--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,6 +1,7 @@
+<link rel="stylesheet" href="/stylesheets/main.css" />
 <div class="container">
-  <header><img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/bb/Los_Angeles_Clippers_%282015%29.svg/1024px-Los_Angeles_Clippers_%282015%29.svg.png" width="75" class=""></header>
   <div class="col-md-8 col-md-offset-2">
+  <h2 style="text-align: right"><img src="https://upload.wikimedia.org/wikipedia/commons/7/71/LA_Clippers_wordmark_2015%E2%80%93current.png" width="100"></h2>
     <h2><center>Welcome to the Los Angeles Clippers' Social Page!</h2>
 
     <p style="font-size:18px">Please <b>Sign Up</b> below to contine: </p>
