--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -2,7 +2,8 @@
     <div class="col-md-1"></div>
     <div class="col-md-10">
         <div class="alert alert-dark text-center">
-            <h2 style="text-align: left"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/bb/Los_Angeles_Clippers_%282015%29.svg/1024px-Los_Angeles_Clippers_%282015%29.svg.png" width="75"><center>Welcome <%=current_user.username %> to the LA Clippers Club!</center></h2>
+        <h1 style="text-align: right"><img src="https://upload.wikimedia.org/wikipedia/commons/7/71/LA_Clippers_wordmark_2015%E2%80%93current.png" width="100"></h1>
+            <h2><center>Welcome <%=current_user.username %> to the LA Clippers Club!</center></h2>
             <span><center>The perfect place for the fans to connect over their favorite team.</span>
             <br><br>
         </div>
