--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,5 @@
-<h1>Login to Clipper Nation!</h1>
+<h1 style="text-align: right"><img src="https://upload.wikimedia.org/wikipedia/commons/7/71/LA_Clippers_wordmark_2015%E2%80%93current.png" width="100"></h1>
+<h2>Login to Clipper Nation!</h2>
 <form method="post" action="/login">
   <input type="text" name="username" placeholder="Username:">
   <input type="text" name="password" placeholder="Password:">
