--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,3 +1,4 @@
+<h2 style="text-align: right"><img src="https://upload.wikimedia.org/wikipedia/commons/7/71/LA_Clippers_wordmark_2015%E2%80%93current.png" width="100"></h2>
 <h2>Welcome New User!</h2>
 
 <% unless locals.empty? %>
