--- a/app/views/users/logout.erb
+++ b/app/views/users/logout.erb
@@ -1,3 +1,4 @@
+<h2 style="text-align: right"><img src="https://upload.wikimedia.org/wikipedia/commons/7/71/LA_Clippers_wordmark_2015%E2%80%93current.png" width="100"></h2>
 <form action="/logout" method="post">
   Logout?
   <input type="submit" name="logout" >
