--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -20,7 +20,7 @@
   }
 
   .wrapper {
-    background: beige;
+    background: rgb(247, 247, 216);
     -moz-box-shadow: 0 0 10px rgba(0,0,0,.3);
     -webkit-box-shadow: 0 0 10px rgba(0,0,0,.3);
     box-shadow: 0 0 10px rgba(0,0,0,.3);
