--- a/app/views/posts/create_post.erb
+++ b/app/views/posts/create_post.erb
@@ -1,7 +1,16 @@
-<h2 style="text-align: right"><img src="https://upload.wikimedia.org/wikipedia/commons/7/71/LA_Clippers_wordmark_2015%E2%80%93current.png" width="100">
-<h2>Add a post</h2>
-<form action="/posts" method="POST">
-  <p>Title: <input type="text" name="title"></p>
-  <p>Status: <input type="text" name="content"></p>
-  <input class="btn btn-primary" type="submit" value="submit">
-</form>
+<div class="w3-row-padding">
+  <div class="w3-col m12">
+  <h4>;lkj;lkj;ljk;kj;kljj;jlk;ljk</h4>
+  </div>
+</div>
+  <div class="w3-container w3-card w3-white w3-round w3-margin"><h2><center>Create a New Post</center></h2>
+  <form action="/posts" method="POST">
+    <p><center>Title:<input type="text" name="title"></center></p>
+    <p><center>Status:<textarea name="content"></textarea></p>
+    <center><input class="btn btn-primary" type="submit" value="submit"></center>
+  </form>
+  <span class="w3-right w3-opacity"></span>
+  <h3 style="font-size:20px"></h3>
+  <div class="w3-row-padding" style="margin:0 -16px">
+  </div>
+</div>
