--- a/app/views/posts/edit_post.erb
+++ b/app/views/posts/edit_post.erb
@@ -4,7 +4,7 @@
 <form action="/posts/<%= @post.id %>" method="post">
     <input type="hidden" name="_method" value="patch">
     Title: <input type="text" name="title" value="<%= @post.title %>">
-    Content: <input type="text" name="content" value="<%= @post.content %>">
+    Content: <textarea name="content"><%= @post.content %></textarea>
     <input type="submit" value="Edit Post">
 </form>
 
