--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -40,7 +40,15 @@
                 </div>
             </div>
         <br>
-    <!-- End Left Column -->
+
+            <div class="w3-card w3-round w3-white w3-padding-16 w3-center">
+            <p>ADS</p>
+          </div>
+          <br>          
+          <div class="w3-card w3-round w3-white w3-padding-32 w3-center">
+            <p><img src="https://cdn.joinhoney.com/images/share/honey-money-falling.gif" style="width:200px;"></p>
+          </div>
+          <!-- End Left Column -->
     </div>
     <!-- Middle Column -->
     <div class="w3-col m7">
@@ -86,30 +94,21 @@
       
       <div class="w3-card w3-round w3-white w3-center">
         <div class="w3-container">
-          <p>Friend Request</p>
-          <img src="/w3images/avatar6.png" alt="Avatar" style="width:50%"><br>
-          <span>Jane Doe</span>
+          <p>Previous Game:</p>
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Letter_w.svg/108px-Letter_w.svg.png" alt="Avatar" style="width:50%"><br>
+          <p>Clippers Vs. Bulls</p>
+          <p>123 - 112</p>
           <div class="w3-row w3-opacity">
             <div class="w3-half">
-              <button class="w3-button w3-block w3-green w3-section" title="Accept"><i class="fa fa-check"></i></button>
+              <button class="w3-button w3-block w3-green w3-section" title="Accept" style="font-size: 12px"><img src="https://sportslogohistory.com/wp-content/uploads/2018/04/los_angeles_clippers_dan_kennedy-1-150x150.png" style="width:30px;"><br><center>(24-13)</center></button>
             </div>
             <div class="w3-half">
-              <button class="w3-button w3-block w3-red w3-section" title="Decline"><i class="fa fa-remove"></i></button>
+              <button class="w3-button w3-block w3-red w3-section" title="Decline" style="font-size: 12px"><img src="https://ssl.gstatic.com/onebox/media/sports/logos/ofjScRGiytT__Flak2j4dg_96x96.png" style="width:30px;"><br><center>(24-13)</center></button>
             </div>
           </div>
         </div>
       </div>
       <br>
-      
-      <div class="w3-card w3-round w3-white w3-padding-16 w3-center">
-        <p>ADS</p>
-      </div>
-      <br>
-      
-      <div class="w3-card w3-round w3-white w3-padding-32 w3-center">
-        <p><i class="fa fa-bug w3-xxlarge"></i></p>
-      </div>
-      
     <!-- End Right Column -->
     </div>
     
