--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -16,7 +16,7 @@
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
-  <body bgcolor="#F3F3E9">
+  <body >
     <%if logged_in?%>
     <div class="w3-top">
  <div class="w3-bar w3-theme-d2 w3-left-align w3-large">
