--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,15 +1,26 @@
-<h2 style="text-align: right"><img src="https://upload.wikimedia.org/wikipedia/commons/7/71/LA_Clippers_wordmark_2015%E2%80%93current.png" width="100"></h2>
-<h2>Welcome New User!</h2>
+<body style= "background-image: url('https://i.pinimg.com/originals/25/9c/08/259c081cf67c0c5e351817663c4d1479.jpg'); background-size: 35%;">
+<div class="w3-container w3-card w3-round w3-margin"  style="background-color:DarkBlue;">
+    <h2 style="color:White;"><center>Welcome New User!</h2>
+      <% unless locals.empty? %>
+        <%= message %>
+      <% end %>
+</div>
+</body>
 
-<% unless locals.empty? %>
-  <%= message %>
-<% end %>
-<br>
-<h3>Sign Up</h3>
-<br>
-<form action="/signup" method="POST">
-  <p>Username: <input type="text" name="username"></p>
-  <p>Email: <input type="text" name="email"></p>
-  <p>Password: <input type="text" name="password"></p>
-  <input class="btn btn-primary" type="submit">
-</form>
+<div class="w3-container w3-content" style="max-width:1400px;margin-top:80px">  
+    <div class="w3-row">
+        <div class="w3-col m3">
+            <div style class="w3-card w3-round w3-white">
+                <div class="w3-container">
+                    <h4 class="w3-center"><p style="font-size:18px">Please <b>Sign Up</b> below to contine: </p>
+                    <p style="font-size:11px">Already a member? Click <a href="/login"<b>Sign In</b></a> to contine</p></h4>
+                    <nav>
+                    <form action="/signup" method="POST">
+                    <p>Username: <input type="text" name="username"></p>
+                    <p>Email: <input type="text" name="email"></p>
+                    <p>Password: <input type="text" name="password"></p>
+                    <input class="btn btn-primary" type="submit">
+                  </form>
+                  <br>
+</div>
+</div>
