--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -1,3 +1,4 @@
+<body style= "background-image: url('https://www.wallpapertip.com/wmimgs/58-583415_clippers-wallpaper.jpg');">
 <div>
     <div class="col-md-1"></div>
     <div class="col-md-10">
@@ -42,7 +43,7 @@
         <br>
 
             <div class="w3-card w3-round w3-white w3-padding-16 w3-center">
-            <p>ADS</p>
+            <p><img src="https://media-assets-01.thedrum.com/cache/images/thedrum-prod/s3-news-tmp-56002-2-bumble-poster--default--730.jpg" style="width:200px;"></p>
           </div>
           <br>          
           <div class="w3-card w3-round w3-white w3-padding-32 w3-center">
@@ -55,7 +56,9 @@
    
       <div class="w3-row-padding">
         <div class="w3-col m12">
-        <h4><center><b>Recent Posts:</b><center></h4>
+          <div class="w3-container w3-card w3-white w3-round w3-margin">
+            <h4><center><b>Recent Posts:</b><center></h4>
+          </div>
         </div>
       </div>
       <% @posts.each do |p| %>
@@ -118,5 +121,6 @@
 <!-- End Page Container -->
 </div>
 <br>
+</body>
 
 
