--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -1,13 +1,28 @@
-<h2 style="text-align: right"><img src="https://upload.wikimedia.org/wikipedia/commons/7/71/LA_Clippers_wordmark_2015%E2%80%93current.png" width="100">
-Title: <%= @post.title %><br>
-Content: <%= @post.content %><br>
-
-        <% if current_user == @post.user %>
-        <a href="/posts/<%= @post.id %>/edit">Edit Post</a>
-
-        <form action="/posts/<%= @post.id %>" method="post">
-        <input type="hidden" name="_method" value="delete">
-        </form>
+<body style= "background-image: url('https://i.pinimg.com/originals/25/9c/08/259c081cf67c0c5e351817663c4d1479.jpg'); background-size: 35%;">
+<div class="w3-container w3-card w3-round w3-margin"  style="background-color:DarkBlue;">
+            <br>
+            <h2 style="color:White;"><center><%= @post.title %></h2>
+        </div>
+        </body>
         
-        <a href="/posts"> Publish Your Post </a> 
-        <% end %>
+        <div class="w3-container w3-content" style="max-width:1400px;margin-top:80px">  
+            <div class="w3-row">
+                <div class="w3-col m3">
+                    <div style class="w3-card w3-round w3-white">
+                        <div class="w3-container">
+
+                            <h4 class="w3-center"><p style="font-size:18px"><%= @post.content %><br></p></h4>
+                            <% if current_user == @post.user %>
+                            <a href="/posts/<%= @post.id %>/edit">Edit Post</a>
+                    
+                            <form action="/posts/<%= @post.id %>" method="post">
+                            <input type="hidden" name="_method" value="delete">
+                            </form>
+                            
+                            <a href="/posts"> Publish Your Post </a> 
+                            <% end %>
+                            <br>
+                            <a href="/posts"> Return to Homepage </a> 
+                        <br>
+                        </div>
+                    </div>
