--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,8 +1,31 @@
-<h1 style="text-align: right"><img src="https://upload.wikimedia.org/wikipedia/commons/7/71/LA_Clippers_wordmark_2015%E2%80%93current.png" width="100"></h1>
-<h2>Login to Clipper Nation!</h2>
-<form method="post" action="/login">
-  <input type="text" name="username" placeholder="Username:">
-  <input type="text" name="password" placeholder="Password:">
-
-  <input type="submit" value="submit">
-</form>
+<body style= "background-image: url('https://i.pinimg.com/originals/25/9c/08/259c081cf67c0c5e351817663c4d1479.jpg'); background-size: 35%;">
+<h1 style="text-align: right"></h1>
+<div class="w3-container w3-card w3-round w3-margin"  style="background-color:DarkBlue;">
+    <h2 style="color:White;"><center>Login to Clipper Nation!</h2>
+      <% unless locals.empty? %>
+        <%= message %>
+      <% end %>
+</div>
+<div class="w3-container w3-content" style="max-width:1400px;margin-top:80px">  
+    <div class="w3-row">
+        <div class="w3-col m3">
+            <div style class="w3-card w3-round w3-white">
+                <div class="w3-container">
+                    <p style="font-size:11px">Need a membership? Click <a href="/signup"<b>Sign Up</b></a> to contine</p></h4>
+                    <form method="post" action="/login">
+                    <input type="text" name="username" placeholder="Username:">
+                    <br><br>
+                    <input type="text" name="password" placeholder="Password:">
+                    <br><br>
+                    <br>
+                    <input type="submit" value="submit">
+                    </form>
+                    <br>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+    
+          
+</body>
