--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,9 +19,9 @@
   <body >
     <%if logged_in?%>
     <div class="w3-top">
- <div class="w3-bar w3-theme-d2 w3-left-align w3-large">
+ <div class="w3-bar w3-left-align w3-large" style="background-color:LightBlue;">
   <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-  <a href="/posts" class="w3-bar-item w3-button w3-padding-large w3-grey"></i><img src="http://assets.stickpng.com/images/58419c59a6515b1e0ad75a60.png" width="30"></a>
+  <a href="/posts" class="w3-bar-item w3-button w3-padding-large w3-grey"></i><img src="https://sportslogohistory.com/wp-content/uploads/2018/04/los_angeles_clippers_concept_weinstein.png" width="30"></a>
   <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Account Settings"><i class="fa fa-user"></i></a>
   <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white" title="Messages"><i class="fa fa-envelope"></i></a>
   <div class="w3-dropdown-hover w3-hide-small">
@@ -30,7 +30,7 @@
     </div>
   </div>
   <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white" title="My Account">
-    <img src="https://turbologo.com/articles/wp-content/uploads/2019/12/Los-Angeles-Clippers-emblem.png.webp" class="w3-circle" style="height:23px;width:25px" alt="Avatar"></a>
+    <img src="https://sportslogohistory.com/wp-content/uploads/2018/04/los_angeles_clippers_concept_weinstein.png" class="w3-circle" style="height:23px;width:25px" alt="Avatar"></a>
   <%end%>
  </div>
 </div>
