--- a/app/views/posts/create_post.erb
+++ b/app/views/posts/create_post.erb
@@ -5,17 +5,54 @@
 </div>
 </body>
 
-<div class="w3-container w3-content" style="max-width:1400px;margin-top:80px">  
-    <div class="w3-row">
-        <div class="w3-col m3">
-            <div style class="w3-card w3-round w3-white">
-                <div class="w3-container">
-                    <h4 class="w3-center"><p style="font-size:18px">Join the conversation!</p></h4>
-                    <form action="/posts" method="POST">
-                    <p>Title:<input type="text" name="title"></p>
-                    <p>Status:<textarea name="content"></textarea></p>
-                    <input class="btn btn-primary" type="submit" value="submit">
-                    </form>
-                  <br>
+            <!-- Page Container -->
+            <div class="w3-container w3-content" style="max-width:1400px;margin-top:80px">    
+                <!-- The Grid -->
+                <div class="w3-row">
+                <!-- Left Column -->
+                    <div class="w3-col m3">
+                    <!-- Profile -->
+                        <div class="w3-card w3-round w3-white">
+                            <div class="w3-container">
+                                <h4 class="w3-center"><b><%=current_user.username%></b></h4>
+                                <p class="w3-center"> <img src="https://sportslogohistory.com/wp-content/uploads/2018/04/los_angeles_clippers_concept_weinstein.png" class="w3-circle" style="height:106px;width:106px"></p>
+                                <hr>
+                                <p><center><%=current_user.email%></center></p>
+                            </div>
+                        <% if logged_in? %>
+                            <div class="w3-row-padding">
+                                
+                            <%end%>
+                            </div>
+                        </div>
+                    <br>
+            
+                        <div class="w3-card w3-round w3-white w3-padding-16 w3-center">
+                        <p><img src="https://cdn.dribbble.com/users/227808/screenshots/1442473/swim-ad.gif" style="width:200px;"></p>
+                      </div>
+                      <br>          
+                      <div class="w3-card w3-round w3-white w3-padding-16 w3-center">
+                        <p><img src="https://dwkujuq9vpuly.cloudfront.net/news/wp-content/uploads/2020/06/Online-ads-news-MAIN_v3-960x480.jpg" style="width:200px;"></p>
+                      </div>
+                      <!-- End Left Column -->
                 </div>
-            </div>
+                <!-- Middle Column -->
+                <div class="w3-col m7">
+               
+                  <div class="w3-row-padding">
+                    <div class="w3-col m12">
+                      <div class="w3-container w3-card w3-white w3-round w3-margin">
+
+                                      <h4 class="w3-center"><p style="font-size:18px">Join the conversation!</p></h4>
+                                      <form action="/posts" method="POST">
+                                      <p>Title:<input type="text" name="title"></p>
+                                      <p>Status:<textarea name="content"></textarea></p>
+                                      <input class="btn btn-primary" type="submit" value="submit">
+                                      </form>
+                                    <br>
+                    
+                    </div>
+                  </div>
+                  
+                <!-- End Middle Column -->
+                </div>
