--- a/app/views/posts/index.erb
+++ b/app/views/posts/index.erb
@@ -1,10 +1,10 @@
-<body style= "background-image: url('https://www.wallpapertip.com/wmimgs/58-583415_clippers-wallpaper.jpg');">
+<body style= "background-image: url('https://www.wallpapertip.com/wmimgs/58-583415_clippers-wallpaper.jpg'); background-attachment: fixed; background-position: center; background-repeat: no-repeat; background-size: cover;">
 <div>
     <div class="col-md-1"></div>
     <div class="col-md-10">
         <div class="alert alert-dark text-center">
-        <br><br>
-            <div class="w3-container w3-card w3-blue w3-round w3-margin">
+        <br>
+            <div class="w3-container w3-card w3-round w3-margin" style="background-color:DarkBlue; color:White; " >
                 <h2><center><b>Welcome <%= current_user.username %> to the LA Clippers Club!</b></center></h2>
                 <span><center>The perfect place for the fans to connect over their favorite team.</center></span>
                 <br>
@@ -22,7 +22,7 @@
             <div class="w3-card w3-round w3-white">
                 <div class="w3-container">
                     <h4 class="w3-center"><b><%=current_user.username%></b></h4>
-                    <p class="w3-center"><img src="https://robohash.org/sitsequiquia.png?size=300x300&set=set1" class="w3-circle" style="height:106px;width:106px"></p>
+                    <p class="w3-center"><img src="https://sportslogohistory.com/wp-content/uploads/2018/04/los_angeles_clippers_concept_weinstein.png" class="w3-circle" style="height:106px;width:106px"></p>
                     <hr>
                     <p><%=current_user.email%></p>
                     <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> Washington, DC</p>
@@ -32,9 +32,9 @@
                 <div class="w3-row-padding">
                     <div class="w3-col m12">
                         <div class="w3-container w3-padding">
-                            <center><button type="button" class="w3-button w3-grey w3-small"><i class="fa fa-pencil"></i><a href="/posts/new"> Create Post </a></button></center>
+                            <center><button type="button" class="w3-button w3-small" style="background-color:Red;"><i class="fa fa-pencil"></i><a href="/posts/new"> Create Post </a></button></center>
                             <br>
-                            <center><button type="button" class="w3-button w3-red w3-small"><a href="/logout"> Log Out </a></button></center>
+                            <center><button type="button" class="w3-button w3-small" style="background-color:LightBlue;"><a href="/logout"> Log Out </a></button></center>
                         </div>
                     </div>
                 <%end%>
@@ -63,14 +63,13 @@
       </div>
       <% @posts.each do |p| %>
         <div class="w3-container w3-card w3-white w3-round w3-margin"><%=p.user.username%>
-        <img src="<%= p.user.img_url == nil ? 'https://robohash.org/sitsequiquia.png?size=300x300&set=set1' : p.user.img_url %>" class="w3-left w3-circle w3-margin-right" style="width:60px">
-        <span class="w3-right w3-opacity"><%=p.timestamp%></span>
+        <img src="<%= p.user.img_url == nil ? 'https://sportslogohistory.com/wp-content/uploads/2018/04/los_angeles_clippers_concept_weinstein.png' : p.user.img_url %>" class="w3-left w3-circle w3-margin-right" style="width:60px">
+        <span class="w3-right w3-opacity"><%=p.timestamp == nil ? Date.today.strftime('%Y-%m-%d') : p.timestamp.strftime('%Y-%m-%d') %></span>
         <h3 style="font-size:20px"><a href="/posts/<%= p.id %>"><b><%= p.title %></b></a></h3>
         <p> <%= p.content %></p>
         <div class="w3-row-padding" style="margin:0 -16px">
         </div>
-        <button type="button" class="w3-button w3-blue w3-margin-bottom w3-small"><i class="fa fa-thumbs-up"></i>  Like</button> 
-        <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom w3-small"><i class="fa fa-comment"></i>  Comment</button>
+
         <% if current_user == p.user %>
             <a href="/posts/<%= p.id %>/edit"></a> 
         <% end %>
@@ -98,7 +97,7 @@
       <div class="w3-card w3-round w3-white w3-center">
         <div class="w3-container">
           <p>Previous Game:</p>
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Letter_w.svg/108px-Letter_w.svg.png" alt="Avatar" style="width:50%"><br>
+          <img src="https://media4.giphy.com/media/3o6ZsSfuo7a6lVlbNK/giphy.gif" alt="Avatar" style="width:50%"><br>
           <p>Clippers Vs. Bulls</p>
           <p>123 - 112</p>
           <div class="w3-row w3-opacity">
