--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -11,7 +11,10 @@
         <div class="w3-col m3">
             <div style class="w3-card w3-round w3-white">
                 <div class="w3-container">
-                    <p style="font-size:11px">Need a membership? Click <a href="/signup"<b>Sign Up</b></a> to contine</p></h4>
+                    <p style="font-size:11px">Need a membership? Click <a style= "color:blue" href="/signup"<b>Sign Up</b></a> to contine</p></h4>
+                    <% if locals.empty? %>
+                    <p style="font-size:10px; color:Red";><%= flash[:message] %></p> 
+                    <% end %>
                     <form method="post" action="/login">
                     <input type="text" name="username" placeholder="Username:">
                     <br><br>
