--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<body style= "background-image: url('https://www.wallpapertip.com/wmimgs/58-583415_clippers-wallpaper.jpg');">
+<body style= "background-image: url('https://www.wallpapertip.com/wmimgs/58-583415_clippers-wallpaper.jpg'); background-attachment: fixed; background-position: center; background-repeat: no-repeat; background-size: cover;">
 <div class="w3-container w3-card w3-round w3-margin" style="background-color:DarkBlue;">
     <h2 style="color:White;"><center>Welcome to the Los Angeles Clippers Social Page!</h2>
     <br>
